jss-compiler/tests/lexer/invalid/unterminated_string.jss
let str texto = "sem fechamento
let int x = 1;
